@@ -1,2 +1,3 @@
 *.html
 *.txt
+.bundle
