@@ -1,7 +1,0 @@
-require "rake/testtask"
-
-Rake::TestTask.new do |t| 
-  t.libs << "tests"
-  t.test_files = FileList["tests/test*.rb"]
-  t.verbose = true 
-end
